[workspace]

members = [
    "rustHello",
    "macro_export",
    "visibilitytest",
    "feature_sample_start",
    "httpie",
    "thumbor",
    "queryer",
    "implfortuples",
    "syncmacro",
    "asynctokio",
    "bs58test",
    'turbofish_demo',
    'no_std_formatter',
    'no_core_code',
    'fully-qualified-access',
    'feature_sample_local_remote',
    'feature-sample-memorydisk',
    'cfg_attr_sample',
    'serde_json_sample',
    'adhoc_polymorphism_howto_trait',







]


[profile.release]
panic = 'unwind'