[workspace]

members = [
    "rustHello",
    "macro_export",
    "visibilitytest",
    "feature_sample_start",
    "httpie",
    "thumbor",
    "queryer",
    "implfortuples",
    "syncmacro",
    "asynctokio",
    "bs58test",
    'turbofish_demo',
    'no_std_formatter',
    'fully-qualified-access',
    'feature_sample_local_remote',
    'feature-sample-memorydisk',
    'cfg_attr_sample',
    'serde_json_sample',
    'adhoc_polymorphism_howto_trait',
    'string_to_hex',
    'rocksdbactixweb',
    'PatriciaTrie',
    'microservice',
    'late-night-rocket',
    'todos-graphql-api',
    'diesel-learn',
    'actix_web_learn',
    'actix_actor',
    'diesel-raw-sql',
    'sqlx-learn',
    'seaorm-learn',
    'tcp_server',
    'web3_sample',
    'leetcode',
    'pinsample',
    'hyper_sample',
    'hyper-minimal-web',
    'unconstrained_type_parameter',
    'trait_inheritance',




]


[profile.release]
panic = 'unwind'
debug = true