[package]
name = "asynctokio"
version = "0.1.0"
edition = "2021"

[[example]]
name = "asynctest"

[[example]]
name = "async_size_of"

[[example]]
name = "async_sequal"


[[example]]
name = "futures_study"

[[example]]
name = "futures_study2"

[[example]]
name = "futures_study3"

[[example]]
name = "futures_join_select"

[[example]]
name = "futures_combinator1"

[[example]]
name = "async_repeat_task"

[dependencies]
tokio = { version = "1", features = ["full"] } # 异步处理库
chrono = "0.4"
futures = { version = "0.3", features = ["thread-pool"] }
env_logger = "0.8"
log = "0.4"
reqwest = "0.11"
rand = "0.8.4"

