[package]
name = "hyper_min"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "context_normal"
[[example]]
name = "context_generics"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
async-trait = "0.1"
rand ="0.8"
log = "0.4.14"