[package]
name = "rayon_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "rayon_pall_image"


[dependencies]
rayon = "1.6.0"
image = { version = "0.24.4", features = ["webp-encoder", "gif"] }
fast_image_resize = { version = "2.0.0" }
glob = "0.3.0"
error-chain = "0.12.4"
