[package]
name = "rustHello"
version = "0.1.0"
authors = ["lint <lint@trip.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.60"
ferris-says = "0.2.1"
color-backtrace = { version = "0.5" }
lazy_static = "1" # 通过宏更方便地初始化静态变量
macro_export = { path = "../macro_export" }
visibilitytest = { path = "../visibilitytest" }
httpie = { path = "../httpie" }
os_different ={path="../cfg_attr_sample", package="cfg_attr"}



#这里演示feature的default、特定feature的情况，可以尝试 把 default-features = false 和 features =["ico"] 删除掉，看输出，会输出bmp 和 webp，
#留着他们，表示要禁用default feature，使用 ico 这个feature，这时输出只有 bmp
[dependencies.feature_sample_entry]
path ="../feature_sample_start"
package="feature_sample_entry"
default-features = false
features =["ico"]   #这里可以换 ico，bmp，png






