[package]
name = "web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls"] } #使用rust实现的tls
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"