[package]
name = "web3_sample"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple_storage"


[dependencies]
hex = "0.4"

#使用rust实现的tls
web3 = { version = "0.17.0" }
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
secp256k1 = "0.20.3"  #
hex-literal = "0.3.4"
env_logger = "0.7.1"
parking_lot = "0.11"
ethereum_abi = "0.4.0"












